--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,11 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.+'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.jakewharton:butterknife:8.0.0'
+    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:recyclerview-v7:21.0.+'
+    compile 'com.android.volley:volley:1.0.+'
 }
+
 repositories {
     mavenCentral()
 }
